tests/tools/checker/positive/recursive_parse_node_shape.nv
enum ParseNodeKind {
    Program;
    FunctionDecl;
}

struct ParseNode {
    kind: ParseNodeKind;
    name: str;
    children: vec<ParseNode>;
}

fn main() : void {
    return;
}
