tests/tools/checker/negative/void_param.nv
fn main(x: void) : void {
    return;
}
